<resources>
    <string name="travelpath_home_title">TravelPath Aix-en-Provence</string>
    <string name="travelpath_open_planner">Ouvrir TravelPath</string>
    <string name="travelpath_tab_search">Recherche</string>
    <string name="travelpath_tab_saved_routes">Mes trajets</string>
    <string name="travelpath_search_intro_title">Construire un trajet autour d Aix-en-Provence</string>
    <string name="travelpath_search_intro_body">Le formulaire propose des sorties codees en dur autour d Aix-en-Provence.</string>
    <string name="travelpath_search_signed_in">Vous etes connecte. Enregistrez les trajets qui vous interessent.</string>
    <string name="travelpath_search_signed_out">Connectez-vous pour sauvegarder vos trajets dans l onglet Mes trajets.</string>
    <string name="travelpath_search_budget_label">Budget maximum</string>
    <string name="travelpath_search_budget_hint">Exemple : 25</string>
    <string name="travelpath_search_budget_required">Entrez un budget maximum.</string>
    <string name="travelpath_search_budget_invalid">Le budget doit etre un nombre positif.</string>
    <string name="travelpath_search_activity_label">Activite souhaitee</string>
    <string name="travelpath_search_place_label">Lieu(x) a inclure</string>
    <string name="travelpath_search_place_hint">Exemple : Musee Granet, Cours Mirabeau</string>
    <string name="travelpath_search_duration_label">Duree disponible</string>
    <string name="travelpath_search_effort_label">Niveau d efforts</string>
    <string name="travelpath_search_outdoor_label">Sortie en exterieur</string>
    <string name="travelpath_search_generate">Generer des trajets</string>
    <string name="travelpath_search_dataset_error">Les donnees Aix-en-Provence n ont pas pu etre chargees.</string>
    <string name="travelpath_search_results_summary">%1$d proposition(s) generee(s).</string>
    <string name="travelpath_search_no_results">Aucun trajet ne correspond a %1$s avec ces contraintes.</string>
    <string name="travelpath_duration_1h">1 h</string>
    <string name="travelpath_duration_2h">2 h</string>
    <string name="travelpath_duration_3h">3 h</string>
    <string name="travelpath_duration_4h">4 h</string>
    <string name="travelpath_duration_5h">5 h</string>
    <string name="travelpath_effort_relaxed">Relaxe - adapte seniors et enfants</string>
    <string name="travelpath_effort_standard">Standard</string>
    <string name="travelpath_outdoor_any">Peu importe</string>
    <string name="travelpath_outdoor_yes">Oui</string>
    <string name="travelpath_outdoor_no">Non</string>
    <string name="travelpath_saved_routes_intro_title">Mes trajets enregistres</string>
    <string name="travelpath_saved_routes_intro_body">Retrouvez ici les trajets sauvegardes sur votre compte Firebase.</string>
    <string name="travelpath_saved_routes_sign_in_required">Connectez-vous pour voir les trajets sauvegardes.</string>
    <string name="travelpath_saved_routes_loading">Chargement des trajets sauvegardes...</string>
    <string name="travelpath_saved_routes_empty">Aucun trajet enregistre pour le moment.</string>
    <string name="travelpath_saved_routes_error">Impossible de charger vos trajets sauvegardes.</string>
    <string name="travelpath_open_map">Ouvrir la carte</string>
    <string name="travelpath_open_travelshare">Ouvrir TravelShare</string>
    <string name="travelpath_pick_cancel">Annuler</string>
    <string name="travelpath_pick_confirm">Choisir ce lieu</string>
    <string name="travelpath_pick_hint">Touchez un point d interet ou faites un appui long pour choisir un lieu.</string>
    <string name="travelpath_pick_selected">Lieu selectionne : %1$s</string>
    <string name="travelpath_back_to_search">Retour a TravelPath</string>
    <string name="travelpath_route_map_loading">Chargement du trajet sur la carte...</string>
    <string name="travelpath_route_map_empty">Aucun arret disponible pour ce trajet.</string>
    <string name="travelpath_route_map_summary">%1$s\n%2$s</string>
    <string name="travelpath_route_map_summary_loading">%1$s\n%2$s\nTracet routier en cours...</string>
    <string name="travelpath_route_map_summary_error">%1$s\n%2$s\nImpossible de charger le trajet par les rues.</string>
    <string name="travelpath_route_card_meta">%1$s  |  %2$s  |  %3$s</string>
    <string name="travelpath_route_map_button">Voir sur la carte</string>
    <string name="travelpath_route_save">Enregistrer</string>
    <string name="travelpath_route_sign_in_to_save">Se connecter pour enregistrer</string>
    <string name="travelpath_route_saved">Enregistre</string>
    <string name="travelpath_route_delete">Supprimer</string>
    <string name="travelpath_route_save_success">Trajet enregistre.</string>
    <string name="travelpath_route_save_failure">Impossible d enregistrer ce trajet.</string>
    <string name="travelpath_route_delete_success">Trajet supprime.</string>
    <string name="travelpath_route_delete_failure">Impossible de supprimer ce trajet.</string>
    <string name="travelpath_sign_in">Se connecter</string>
    <string name="travelpath_start_marker">TravelPath Start</string>
    <string name="travelpath_viewing_place">Lieu du post : %1$s</string>
</resources>